# llm-quota-mem

./: .gitignore  ARCH_RULES.md  PERSONA.md  README.md  Skills.md  TECH_STACK.md  VSCODE_SETUP.md  agents.md  pyproject.toml  setup.bat  setup.ps1  setup.sh
llm_quota_mem/: __init__.py  app.py  benchmark.py  benchmarking.py  cache.py  config.py  domain_adapter.py  embeddings.py  graph.py  intelligence.py  memory.py  personas.py  router.py  tools.py  utils.py
llm_quota_mem/examples/: coding_agent.py  ea_assistant.py  ecc_integration_demo.py  quick_start.py
llm_quota_mem/integrations/ecc/: hooks.py
llm_quota_mem/integrations/ecc/skills/: AWS.md  TOGAF.md
llm_quota_mem/tests/: test_auto_switch.py  test_cache.py  test_e2e_mock.py  test_ecc_logic.py  test_graph.py  test_live_apis.py  test_memory.py  test_new_features.py  test_router.py  test_utils.py
vscode-extension/: .vscodeignore  llm-quota-mem.vsix  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: main.js  style.css
vscode-extension/src/: extension.ts
