[project]
name = "llm-quota-mem"
version = "0.1.0"
description = "Unifying FREE LLM API quota and hybrid memory for efficient AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ruamel.yaml>=0.17.0",
    "tiktoken>=0.7.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_quota_mem"]
